force-app/main/default/objects/nPortal__Context__c/nPortal__Context__c.object-meta.xml
<CustomObject>
    <description>This object provides contextual information about users and their relationships to their online applications. Multiple users can be associated with a single application. The primary applicant is assigned the context Applicant. Other contexts, such as Owner or Other Involved, are assigned the users added to the application by the primary applicant. Depending on a user&apos;s context, they are given a customized UI workflow in Online Application. A new context record is created anytime a user is associated with any application.</description>
    <label>Context</label>
    <nameField>
        <displayFormat>CTX-{000000}</displayFormat>
        <label>Context Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contexts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>