force-app/main/default/objects/nPortal__Context__c/fields/nPortal__Application__c.field-meta.xml
<CustomField>
    <fullName>nPortal__Application__c</fullName>
    <description>The Application field on the Context object auto-populates with a lookup to the application record to which the Context is associated.</description>
    <inlineHelpText>This is the application that this context is associated with.</inlineHelpText>
    <label>Application</label>
    <referenceTo>LLC_BI__Application__c</referenceTo>
    <relationshipLabel>Contexts</relationshipLabel>
    <relationshipName>Contexts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>