force-app/main/default/objects/nPortal__Context__c/fields/nPortal__Context_Complete__c.field-meta.xml
<CustomField>
    <fullName>nPortal__Context_Complete__c</fullName>
    <description>This field tracks the date and time at which the user associated with this Context completed the online application requirements.</description>
    <label>Context Complete</label>
    <type>DateTime</type>
</CustomField>