force-app/main/default/objects/nPortal__Context__c/fields/nPortal__Context_Due__c.field-meta.xml
<CustomField>
    <fullName>nPortal__Context_Due__c</fullName>
    <description>This field tracks the date and time by which a user must complete their application requirements to avoid expiration.</description>
    <label>Context Due</label>
    <type>DateTime</type>
</CustomField>