force-app/main/default/objects/nPortal__Context__c/fields/nPortal__Context_Start__c.field-meta.xml
<CustomField>
    <fullName>nPortal__Context_Start__c</fullName>
    <description>This field tracks the date and time when the user began filling out their online application.</description>
    <label>Context Start</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>