force-app/main/default/objects/nPortal__Context__c/fields/nPortal__Context_Type__c.field-meta.xml
<CustomField>
    <fullName>nPortal__Context_Type__c</fullName>
    <description>Depending on whether the user is a primary applicant, business co-owner, co-borrower or guarantor, or other involved entity, their context record populates with a Context Type. Context Type determines the UI workflow the user experiences in the online application.</description>
    <inlineHelpText>The context type indicates whether the user is a primary applicant (Applicant), a business co-owner (Owner), or a co-borrower or guarantor (Other Involved [Individual].)</inlineHelpText>
    <label>Context Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>