force-app/main/default/objects/nPortal__Context__c/fields/nPortal__ID_Scan_Status__c.field-meta.xml
<CustomField>
    <fullName>nPortal__ID_Scan_Status__c</fullName>
    <description>The system automatically populates this picklist to track the progress through the ID Scan workflow by using the current ID Scan status</description>
    <inlineHelpText>The status of the ID Scan workflow automatically populates in this field.</inlineHelpText>
    <label>ID Scan Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ID Scan Success</fullName>
            </value>
            <value>
                <fullName>ID Scan Failure</fullName>
            </value>
            <value>
                <fullName>Bad Image</fullName>
            </value>
            <value>
                <fullName>Communication Error</fullName>
            </value>
            <value>
                <fullName>Vendor Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>