force-app/main/default/objects/nPortal__Context__c/fields/nPortal__Identity_Verification_Date__c.field-meta.xml
<CustomField>
    <fullName>nPortal__Identity_Verification_Date__c</fullName>
    <description>This field automatically populates. It indicates the most recent date and time the applicant initiated identity verification.</description>
    <inlineHelpText>This field automatically populates. It indicates the most recent date and time the applicant initiated identity verification.</inlineHelpText>
    <label>Identity Verification Date</label>
    <type>DateTime</type>
</CustomField>