force-app/main/default/objects/nPortal__Context__c/fields/nPortal__Risk_And_Fraud_Transaction_Log__c.field-meta.xml
<CustomField>
    <fullName>nPortal__Risk_And_Fraud_Transaction_Log__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The system automatically populates this lookup field with the transaction log record from the Risk and Fraud Verification integration. By default, it is blank.</description>
    <inlineHelpText>This system-populated field displays the Fraud and Verification integration transaction log record.</inlineHelpText>
    <label>Risk and Fraud Transaction Log</label>
    <referenceTo>nFUSE__Transaction_Log__c</referenceTo>
    <relationshipLabel>Risk and Fraud Contexts</relationshipLabel>
    <relationshipName>Risk_and_Fraud_Contexts</relationshipName>
    <type>Lookup</type>
</CustomField>