force-app/main/default/objects/nPortal__Context__c/fields/nPortal__User__c.field-meta.xml
<CustomField>
    <fullName>nPortal__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field populates with the name of the user with whom the context is associated.</description>
    <inlineHelpText>This is the name of the user with whom this context is associated.</inlineHelpText>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Contexts</relationshipLabel>
    <relationshipName>Contexts</relationshipName>
    <type>Lookup</type>
</CustomField>